--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "headers": [
       {
-        "source": "/static/*",
+        "source": "/static/(.*)",
         "headers" : [
           {
             "key" : "Cache-Control",
